static/styles.css
html {
    --bg-color: #E8ECF7;
    --secondary-bg-color: #9BAECC;
    --color-dark: #5E697F;
    --color-light: #76777C;
}

a {
    text-decoration: none;
}

.material-symbols-outlined {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    -khtml-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    font-variation-settings:
    'FILL' 0,
    'wght' 400,
    'GRAD' 0,
    'opsz' 24
}

body {
    margin: 0;
    background: linear-gradient(var(--secondary-bg-color), var(--bg-color));
    font-family: 'Roboto', sans-serif;
    min-height: 100vh;
}

header {
    display: flex;
    align-items: stretch;
    justify-content: space-between;
    min-height: 10vh;
    padding: 0 1vw;
    background: var(--secondary-bg-color);
}

#menu {
    display: none;
    position: fixed;
    background-color: #353535;
    font-size: 12vw;
    padding-right: 30px;
    z-index: 9999;
    transition: all .5s ease;
}

#menu > ul > li {
    list-style: none;
}

#menu-nav > li > a {
    transition: 200ms;
    color: black;
}

#menu-nav > li > a:hover {
    color: white;
}

#menu-nav > li > a:not(hover) {
    color: black;
}

#menu-nav {
    margin-bottom: 0;
}

#menu-nav > hr {
    border: 2px var(--color-light) solid;
    margin: 5px 0;
}

#menu-outer-links {
    display: flex;
    justify-content: space-evenly;
    margin: 2vh 0;
}

#menu-outer-links img {
    width: 130px;
}

#menu-button {
    display: flex;
    justify-content: center;
    align-items: center;
    vertical-align: middle;
    font-size: 6vh;
}

@media only screen and (min-aspect-ratio: 1/1) {
    #menu {
        font-size: 4vw;
    }
    #menu-outer-links img {
        width: 4vw;
    }
}

#header-name {
    font-size: 4vh;
}

@media only screen and (min-aspect-ratio: 1/1) {
    #title-background {
        aspect-ratio: 1069/580;
    }
}

#title-background {
    background-image: url("../static/images/banner.jpg");
    background-repeat: no-repeat;
    background-size: 100vw auto;
    width: 100vw;
    max-height: 70vh;
    margin-bottom: 10px;
}

#title-container {
    height: 100%;
    backdrop-filter: brightness(0.3) grayscale();
    color: var(--bg-color);
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    padding: 0 7.5vw;
    padding-bottom: 30px;
}

#title {
    font-size: 7vw;
}

#title-subtext {
    font-size: 50px;
    text-align: center;
    margin: 0;
}

#title-banner {
    aspect-ratio: 1069/580;
    width: 95vw;
}

.photo-grid-big-row {
    display: flex;
    justify-content: space-between;
    flex-direction: column;
}

.photo-grid-row {
    display: flex;
    justify-content: center;
}

.content-photo-container {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 47vw;
    aspect-ratio: 847/1280;
}

.content-photo {
    transition: 0.1s;
    aspect-ratio: 847/1280;
    width: 45vw;
}

.content-photo:hover {
    width: 47vw;
}

.content-photo:not(hover) {
    width: 45vw;
}

@media only screen and (min-aspect-ratio: 1/1) {
    .photo-grid-big-row {
        flex-direction: row;
    }
    .content-photo-container {
        width: 25vw;
    }
    .content-photo {
        width: 22.5vw;
    }
    .content-photo:hover {
        width: 23vw;
    }
    .content-photo:not(hover) {
        width: 22.5vw;
    }
}

#about-me-banner {
    background-image: url("../static/images/about-me-banner.jpg");
    background-repeat: no-repeat;
    background-size: 100%;
    aspect-ratio: 810/540;
}

#about-me-content {
    color: var(--bg-color);
    background: linear-gradient(15deg, #353535 55%, #454545);
    padding: 2vh 5vw;
}

.about-me-text {
    margin: 0;
    margin-bottom: 1vh;
    font-size: 14px;
}

@media only screen and (min-aspect-ratio: 1/1) {
    #about-me-banner {
        margin: 0 28.2vw;
    }
    #about-me-content {
        margin: 0 28.2vw;
    }
}

#prices-container {
    /* padding: 4vw; */
    padding-bottom: 0;
    height: 110%;
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column; 
}

.price-option {
    width: 80vw;
    display: inline-block;
    background-color: var(--color-dark);
    text-align: center;
    margin: 4vw;
}

.price-option-info {
    padding: 2.2vw;
}

.price-option > img {
    width: 100%;
    aspect-ratio: 1280/848;
}

.price-option-info > h2 {
    white-space: nowrap;
    font-size: 4vw;
}
.price-option-info > h3 {
    white-space: nowrap;
    font-size: 4.5vw;
}
.price-option-info > p {
    font-size: 3vw;
}

@media only screen and (min-aspect-ratio: 1/1) {
    #prices-container {
        flex-direction: row;
        height: auto;
    }
    .price-option {
        width: 27.4vw;
    }
    .price-option-info > h2 {
        font-size: 2vw;
    }
    .price-option-info > h3 {
        font-size: 2.5vw;
    }
    .price-option-info > p {
        font-size: 1vw;
    }
}

